tests/rosetta/out/Rust/abstract-type.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:33Z
#[derive(Debug, Clone)]
enum Beast {
        Dog { kind: &'static str, name: &'static str },
        Cat { kind: &'static str, name: &'static str },
}

fn main() {
    fn beastKind(b: &Beast) -> &'static str {
        return match b {Beast::Dog { kind: k, name: _ } => k, Beast::Cat { kind: k, name: _ } => k, };
    }
    fn beastName(b: &Beast) -> &'static str {
        return match b {Beast::Dog { kind: _, name: n } => n, Beast::Cat { kind: _, name: n } => n, };
    }
    fn beastCry(b: &Beast) -> &'static str {
        return match b {Beast::Dog { kind: _, name: _ } => "Woof", Beast::Cat { kind: _, name: _ } => "Meow", };
    }
    fn bprint(b: &Beast) -> () {
        println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", beastName(&b), ", who's a "), beastKind(&b)), ", cries: ""), beastCry(&b)), ""."));
    }
    fn main() -> () {
        let d: Beast = Beast::Dog { kind: "labrador", name: "Max" };
        let c: Beast = Beast::Cat { kind: "siamese", name: "Sammy" };
        bprint(&d);
        bprint(&c);
    }
    main();
}
